<resources>
    <string name="app_name">Lillsjöyran</string>

    <string name="events">Something something events</string>
    <string name="topics">Something something topics</string>
    <string name="map">Something something fancy map</string>

    <string name="title_login">Login</string>
    <string name="title_register">Create a user</string>
    <string name="title_logout">Logout</string>
    <string name="login_failed">Login failed</string>
    <string name="register_failed">Registration failed</string>
    <string name="error_invalid_username">Invalid username</string>
    <string name="error_no_password">No password</string>
    <string name="error_no_name">Write a name</string>
    <string name="error_invalid_password">That\'s a horrible password</string>
    <string name="error_passwords_dont_match">Passwords don\'t match</string>
    <string name="logging_in">Logging in&#8230;</string>
    <string name="login_button_text">Login</string>
    <string name="registering">Creating a user&#8230;</string>
    <string name="register_button_text">Create a user</string>
    <string name="hint_profile_name">Name</string>
    <string name="hint_profile_username">Username</string>
    <string name="hint_profile_password">Password</string>
    <string name="hint_profile_confirm_password">Confirm password</string>
    <string name="day_time">%1$s %2$s</string>
    <string name="day_time_at_place">%1$s %2$s at %3$s</string>
    <string name="by_author">by %s</string>
    <string name="comments_header">Comments</string>
    <string name="events_tab">Events</string>
    <string name="topics_tab">Topics</string>
    <string name="map_tab">Map</string>
    <string name="title">Title</string>
    <string name="body">Description</string>
    <string name="write_a_comment">Write a comment&#8230;</string>
    <string name="close">Close</string>
    <string name="create_new_event">Create a new event</string>
    <string name="create">Create</string>
    <string name="pick_date">Pick date</string>
    <string name="pick_time">Pick time</string>
    <string name="create_new_topic">Create a new topic</string>
</resources>
